# automldevelopment

./: .dvcignore  .gitignore  README.md  chain_run.sh  pyproject.toml
.dvc/: config
.uaf/: budget_status.json  mlflow.db  mlflow_context.json
.uaf/sessions/chain_1_mar20_1632/: program.md  ruff_report.json  session_analysis.json  session_state.json  system_error_report.json
.uaf/sessions/chain_1_mar21_1231/: program.md  ruff_report.json  (+3 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/example/: task.yaml
data/sports_betting/: elo_history.csv  teams.csv
docs/: progress.md  stage-01-problem.md  stage-02-research.md  stage-03-design-doc.md  stage-04-metrics.md  stage-05-data.md  stage-06-validation.md  stage-08-error-analysis.md  stage-09-pipeline.md  stage-10-features.md  stage-13-monitoring.md  stage-15-ownership.md  stage-16-postmortem.md
tests/unit/: test_analysis.py  test_budget_heartbeat.py  test_hooks.py  test_protocol.py
uaf/: __init__.py  cli.py
uaf/analysis/: result_analyzer.py  system_error_analyzer.py
uaf/budget/: controller.py  convergence.py  status_file.py
uaf/core/: __init__.py  oversight.py  program_generator.py  ruff_enforcer.py  session_controller.py  smoke_tests.py  validation.py
uaf/data/: __init__.py  adversarial_validation.py  leakage_audit.py  loader.py
uaf/integrations/: dvc_setup.py  mlflow_setup.py
uaf/reporting/: latex_templates.py  report_generator.py
uaf/runner/: __init__.py  agent_sdk_runner.py  claude_runner.py  hooks.py  protocol.py  tools.py
(+807 files in other folders)
