[project]
name = "uaf"
version = "0.1.0"
description = "Universal AutoResearch Framework — автоматизация ML-экспериментов через Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.15.0",
    "dvc>=3.51.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "click>=8.1.7",
    "rich>=13.8.0",
    "psutil>=6.0.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
uaf = "uaf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
# RUF001/RUF002/RUF003 ложные срабатывания на кириллицу в русских docstrings/комментариях
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# LaTeX/Jinja2 шаблоны содержат длинные строки по природе формата
"uaf/reporting/latex_templates.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
